//---------------------------------------------------------------------------------------
// {C} Copyright 2019 Pensando Systems Inc. All rights reserved
//
// protobuf specification for debug actions served by any grpc service created by rpckit.
//---------------------------------------------------------------------------------------

syntax = "proto3";
package protos;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/protos/archive.proto";

service Archive {
    rpc CancelRequest(monitoring.ArchiveRequest) returns (monitoring.ArchiveRequest) {};
}
